# Jobanalyzer

./: DESIGN.md  LICENSE  README.md  SKETCHES.md
lsjobs/: .gitignore  Cargo.toml  DESIGN.md  MANUAL.md  ml-systems.json
lsjobs/src/: configs.rs  dates.rs  jobs.rs  load.rs  logfile.rs  logtree.rs  lsjobs.rs  main.rs  sonalyze.rs
naicreport/: .gitignore  README.md  go.mod  ml-cpuhog.go  ml-webload.html  naicreport.go
naicreport/jobstate/: jobstate.go  jobstate_test.go
naicreport/ml-cpuhog/: log.go  ml-cpuhog.go  persistent.go
naicreport/mlbughunt/: mlbughunt.go
naicreport/mlcpuhog/: log.go  log_test.go  mlcpuhog.go  persistent.go  persistent_test.go
naicreport/mldeadweight/: mldeadweight.go
naicreport/mlwebload/: ml-webload.html  mlwebload.go
naicreport/mlwebload/scripts/: daily-by-hour.sh  monthly-by-day.sh
naicreport/scripts/: quarterly-by-day.sh  weekly-by-hour.sh
naicreport/storage/: storage.go  storage_test.go
naicreport/util/: jobreport.go  options.go  options_test.go  time.go
production/ml-nodes/: README.md  bughunt-report.sh  bughunt.sh  cpuhog-report.sh  cpuhog.sh  deadweight-report.sh  deadweight.sh  jobanalyzer-ml4.cron  jobanalyzer.cron  ml-nodes.json  sonar.sh  upload-data.sh  webload-1h.sh  webload-24h.sh
production/ml-nodes/sonar/: README.md
production/sonalyze/ml-nodes/: README.md  bughunt.sh  cpuhog.sh  sonar-ml4.cron  sonar.sh
production/sonar/: sonar.sh
sonalyze/: .gitignore  Cargo.toml  DESIGN.md  MANUAL.md  README.md  ml-systems.json
sonalyze/src/: configs.rs  format.rs  jobs.rs  load.rs  prjobs.rs  sonalyze.rs
sonar_test_data0/: README.md  test_config.json
sonar_test_data0/2023/05/30/: ml8.hpc.uio.no.csv
sonar_test_data0/2023/05/31/: ml1.hpc.uio.no.csv  ml8.hpc.uio.no.csv
sonar_test_data0/2023/06/01/: ml1.hpc.uio.no.csv  ml8.hpc.uio.no.csv
sonar_test_data0/2023/06/02/: ml8.hpc.uio.no.csv
sonar_test_data0/2023/06/03/: ml8.hpc.uio.no.csv
sonar_test_data0/other/: bad_gpu_mask.csv  bad_gpu_set_tagged.csv  bad_timestamp.csv  bad_timestamp_tagged.csv
sonarlog/: Cargo.toml  README.md
sonarlog/src/: configs.rs  dates.rs  hosts.rs  jobs.rs  lib.rs  load.rs  logclean.rs  logfile.rs  logtree.rs  pattern.rs  synthesize.rs
util/distribute/: README.md  distribute.go  go.mod
(+12 files in other folders)
