[package]
name = "lsjobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.3.8", features = ["derive"] }
itertools = "0.11.0"
