[package]
name = "lsjobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsjobs"
path = "src/lsjobs.rs"

[dependencies]
sonarlog = { path = "../sonarlog" }
chrono = "0.4"
clap = { version = "4.3.8", features = ["derive"] }
serde_json = "1.0.104"
