[package]
name = "sonarlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
csv = "1.2.2"
itertools = "0.11.0"
serde = { version = "1.0.175", features = ["derive"] }
