[package]
name = "sonarlog"
authors = ["Lars T Hansen"]
description = "Read and preprocess `sonar` log files"
version = "0.1.0"
edition = "2021"

# Unless clients need to process data from sonar 0.6.0 or earlier they do not need to enable
# untagged_sonar_data.  Starting with sonar 0.7.0, every field carries a name (tag).
[features]
default = []
untagged_sonar_data = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
csv = "1.2.2"
itertools = "0.11.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
